# ai-doctor-visibility

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PRACTICES.md  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
ai_visibility/: __init__.py  __main__.py  cache.py  cfm.py  cli.py  config.py  llm.py  models.py  pipeline.py
ai_visibility/report/: html.py  json_dump.py  markdown.py
ai_visibility/stages/: judge.py  prompts.py  scorer.py  simulator.py
ai_visibility/web/: __init__.py  api_routes.py  app.py  background.py  competitor.py  db.py  routes.py
ai_visibility/web/templates/: base.html  dashboard.html
ai_visibility/web/templates/_partials/: report_embed.html  run_status.html
ai_visibility/web/templates/doctors/: detail.html  list.html  new.html
ai_visibility/web/templates/runs/: detail.html  new.html
docs/diagrams/: system-architecture.excalidraw
docs/plans/: 2026-05-27-nextjs-frontend-rebuild.md
examples/dr_fernando_lopes/: report.html  report.json  report.md  trace.jsonl  trace_v3_judge.jsonl
examples/dra_karina_zold/: report.html  report.json  report.md  trace.jsonl  trace_v3_judge.jsonl
examples/dra_mariana_costa/: report.html  report.json  report.md  trace.jsonl  trace_v3_judge.jsonl
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: score-badge.tsx  score-gauge.tsx  sidebar.tsx  status-badge.tsx
frontend/src/lib/: api.ts  types.ts  utils.ts
infra/: deploy.sh
scripts/: compare_judges.py
tests/: conftest.py  test_api.py  test_cache.py  test_cfm.py  test_integration.py  test_judge.py  test_llm.py  test_models.py  test_recommendations.py  test_reporters.py  test_scorer.py
(+10 files in other folders)
